# turn_based_game

./: CMakeLists.txt  Makefile  README.md  data.txt  mapa.txt  rozkazy.txt  status.txt  turn_based_strategy
inc/: game.hh  libraries.hh  makefile_prototype  player.hh  serialization.hh  serialization.txt  unit.hh  unitBase.hh  unitModel.hh  working_makefile
players_programs/: hello_world.cpp
src/: game.cpp  game.txt  hello.cpp  main.cpp  player.cpp  player_program.cpp  unit.cpp  unitBase.cpp  unitModel.cpp
